--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,12 @@
     -->
     <title>React App</title>
     <style>
+      html{
+        width:100vw;
+      }
       body{
         font-family: 'PT Serif', serif;
+        
       }
     </style>
   </head>
